--- a/FACTIUNN.bib
+++ b/FACTIUNN.bib
@@ -41,14 +41,14 @@
 }
 @online{FISPACT_reference_spectra,
   author = {{UKAEA}},
-  title = {UKAEA: FISTACT-II reference spectra},
+  title = {UKAEA: FISPACT-II reference spectra},
   year = 2017,
   url = {https://fispact.ukaea.uk/wiki/Reference_input_spectra},
   urldate = {10/08/2017}
 }
 
 @online{FISPACT,
-  title = {UKAEA: FISTACT-II},
+  title = {UKAEA: FISPACT-II},
   url = {http://www.ccfe.ac.uk/fispact.aspx},
   urldate = {06/09/2017},
   organization = {Culham Centre for Fusion Energy},
